syntax = "proto3";

package account;

service AccountController {
    rpc createAccount (CreateAccountRequest) returns (CreateAccountResponse);
    rpc getAccount (GetAccountRequest) returns (GetAccountResponse);
}

message CreateAccountRequest {
    string username = 1;
    string passwordHash = 2;
    string email = 3;
    string role = 4;
}

message CreateAccountResponse {
    string userId = 1;
    string accountId = 2;
}

message GetAccountRequest {
    string username = 1;
}

message GetAccountResponse {
    AccountDTO account = 1;
}

message AccountDTO {
    string id = 1;
    string username = 2;
    string email = 3;
    string role = 4;
    UserDTO user = 5;
    optional PreferencesDTO preferences = 6;
}
message PreferencesDTO {

}
message UserDTO {
    string id = 1;
}